# chat-history-recorder-mcp

./: .gitignore  Dockerfile  README.md  README_zh.md  pyproject.toml  smithery.yaml
src/: __init__.py  config.py  history_writer.py  server.py  utils.py
