[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-memory-mcp"
version = "0.1.0"
description = "MCP server for automatic chat history logging"
authors = [
    {name = "Local Memory MCP", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp[cli]>=1.12.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
local-memory-mcp = "src.server:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
